deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
spec:
  ingressClassName: traefik
  rules:
    - host: todo.local
      http:
        paths:
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: todo-orders
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-api
                port:
                  number: 8080
